# cudacaption

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  README.md  pyproject.toml  requirements.txt  spec.md
src/: cli.py  keyframes.py  media.py  runtime_monitor.py  transcribe.py  vision.py  writers.py
src/cudacaption/: cli.py  transcribe.py  writers.py
tests/: test_cli_args.py  test_cli_quality_checks.py
