[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cudacaption"
version = "0.1.0"
description = "Local GPU-accelerated video transcription CLI using Whisper"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = {text = "GPL-3.0-only"}
dependencies = [
  "faster-whisper>=1.0.3",
]

[project.scripts]
cudacaption = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli", "media", "transcribe", "writers"]
