[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cudacaption"
version = "0.1.0"
description = "Local GPU-accelerated video transcription CLI using Whisper"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = {text = "GPL-3.0-only"}
dependencies = [
  "faster-whisper>=1.0.3",
  "nvidia-cublas-cu12>=12.9.2.10",
  "nvidia-cudnn-cu12>=9.21.1.3",
  "nvidia-cuda-runtime-cu12>=12.9.79",
]

[project.scripts]
cudacaption = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli", "media", "transcribe", "writers"]
