[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cudacaption"
version = "0.1.0"
description = "Local GPU-accelerated video transcription CLI using Whisper"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = {text = "GPL-3.0-only"}
dependencies = [
  "faster-whisper>=1.0.3",
  "nvidia-cublas-cu12>=12.9.2.10; platform_system == 'Linux'",
  "nvidia-cudnn-cu12>=9.21.1.3; platform_system == 'Linux'",
  "nvidia-cuda-runtime-cu12>=12.9.79; platform_system == 'Linux'",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.8.0",
  "ruff>=0.12.0",
  "detect-secrets>=1.5.0",
]
vision = [
  "transformers>=4.46.0,<5",
  "pillow>=10.0.0",
  "torch>=2.4.0",
  "einops>=0.8.0",
  "timm>=1.0.9",
]

[project.scripts]
cudacaption = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli", "media", "transcribe", "writers", "keyframes", "vision"]
